[package]
name = "logic"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.9.6"
solana-sdk = "1.9.6"
log = "0.4"
env_logger = "0.9"
debug_macro = { path = "../debug_macro" }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
